# kolu

./: .dependency-cruiser.mjs  .do-results.expected.json  .do-results.json  .envrc  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  .prettierignore  AGENTS.md  CONTRIBUTING.md  DRY.md  README.md  apm.lock.yaml  apm.yml  biome.jsonc  bun.nix  ci.just  default.nix  flake.nix  giton.json  justfile  localci.json  nix-eval-perf-report.md  nix-run  nix-shell-fast  opencode.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  result-themes  shell.nix  talk-agency-lowy-pr.html  talk-remote-redo.html  talk-zed-skill-and-951-plan.html  terminal-tag-plan.html  tsconfig.base.json  vira.hs  workflow_server.py
client/: Cargo.toml  Trunk.toml  index.html  nix-index.html  package.json  style.css  tsconfig.json  vite.config.ts
client/js/: ghostty-bridge.js
client/public/: fonts  manifest.webmanifest
client/src/: ActivityGraph.tsx  AgentIndicator.tsx  App.tsx  ClaudeActivityRow.tsx  ClaudeIndicator.tsx  ClaudeTranscriptDialog.tsx  CloseConfirm.tsx  CommandPalette.tsx  ContextMenu.tsx  DiffModal.tsx  EmptyState.tsx  FilePeek.tsx  FileSearch.tsx  FileTree.tsx  GitChanges.tsx  Header.tsx  HeaderTooltip.tsx  Icons.tsx  InfoPanel.tsx  Kbd.tsx  MetadataInspector.tsx  MissionControl.tsx  MobileKeyBar.tsx  ModalDialog.tsx  NewWorktreeDialog.tsx  Overlay.tsx  PlanPane.tsx  PlanSidebar.tsx  ProcessIndicator.tsx  PwaInstallBar.tsx  RightPanel.tsx  ScrollToBottom.tsx  SearchBar.tsx  SettingsPopover.tsx  ShortcutsHelp.tsx  Sidebar.tsx  SplitBadge.tsx  SplitBar.tsx  SplitPrompt.tsx  SplitStrip.tsx  (+93 more)
server/: Cargo.toml  crate.nix  package.json
server/src/: activitySession.test.ts  activitySession.ts  agent-cli.test.ts  agent-cli.ts  agent.ts  api.rs  clipboard.ts  git.ts  hostname.ts  index.ts  koluRoot.ts  log.ts  main.rs  plans.ts  pty.rs  pty.test.ts  pty.ts  publisher.ts  randomName.ts  (+19 more)
(+777 files in other folders)
