[package]
name = "kolu-client"
version.workspace = true
edition = "2021"
description = "kolu client"

[dependencies]
kolu-common = { path = "../common" }
leptos = { version = "0.7", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window", "Document", "Element", "HtmlElement",
    "WebSocket", "MessageEvent", "BinaryType",
    "AddEventListenerOptions", "KeyboardEvent",
    "ResizeObserver",
    "Storage",
    "console", "Location",
] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
