[package]
name = "kolu-client"
version.workspace = true
edition = "2021"
description = "kolu client"

[dependencies]
kolu-common = { path = "../common" }
codee = "0.3"
leptos = { version = "0.8", features = ["csr"] }
leptos-use = "0.18"
send_wrapper = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window", "Document", "Element", "HtmlElement",
    "Storage",
    "console", "Location",
] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
gloo-net = "0.6"
gloo-timers = "0.3"
