[package]
name = "kolu-server"
version.workspace = true
edition = "2021"
description = "kolu server"

[dependencies]
kolu-common = { path = "../common" }
axum = { version = "0.8", features = ["ws"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
portable-pty = "0.9"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
